<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button2"
    	style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dodajM" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vneseni_materiali" />

	<ListView
		android:layout_width="fill_parent" android:dividerHeight="1dp"
		android:layout_height="fill_parent"
		android:id="@+id/android:list" />


    <TextView
    	android:id="@+id/android:empty"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/materialiNeizbrani" />

</LinearLayout>