<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ime_sklopa" />

        <EditText
            android:id="@+id/title_stena"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/povrsina_stene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/povrsina_stene" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/edit_povrsina_stene"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/m2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m2" />
        </TableRow>

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shrani" />
    </LinearLayout>

</ScrollView>